--- a/pages/form.html
+++ b/pages/form.html
@@ -76,6 +76,17 @@
         } else textError.textContent = "Name is Incorrect";
       });
 
+      const email = document.querySelector("#email");
+      const emailError = document.querySelector(".email-error");
+      email.oninput = function () {
+        const emailRegex = RegExp(
+          "^[a-z0-9]+(([\\._+-][a-z0-9]+)?)\\@[a-z0-9]+\\.(([a-z]{2,4})(\\.[a-z]{2,4})?)$"
+        );
+        if (emailRegex.test(email.value)) {
+          emailError.textContent = "";
+        } else emailError.textContent = "Email is Incorrect";
+      };
+
       const salary = document.querySelector("#salary");
       const output = document.querySelector(".salary-output");
       output.textContent = salary.value;
