--- a/pages/form.html
+++ b/pages/form.html
@@ -96,6 +96,15 @@
         } else telephoneError.textContent = "Telephone number is Incorrect";
       };
 
+      const password = document.querySelector("#pwd");
+      const passwordError = document.querySelector(".pwd-error");
+      password.oninput = function () {
+        const pwdRegex = RegExp("(.{8,})");
+        if (pwdRegex.test(password.value)) {
+          passwordError.textContent = "";
+        } else passwordError.textContent = "Password is Incorrect";
+      };
+
       const salary = document.querySelector("#salary");
       const output = document.querySelector(".salary-output");
       output.textContent = salary.value;
