--- a/pages/form.html
+++ b/pages/form.html
@@ -99,7 +99,7 @@
       const password = document.querySelector("#pwd");
       const passwordError = document.querySelector(".pwd-error");
       password.oninput = function () {
-        const pwdRegex = RegExp("(.{8,})");
+        const pwdRegex = RegExp("^(?=.*[A-Z])(?=.*[a-z])[^\\s]{8,}$");
         if (pwdRegex.test(password.value)) {
           passwordError.textContent = "";
         } else passwordError.textContent = "Password is Incorrect";
